# be_asset_mgmt

./: .gitignore  docker-compose.yml  fastapi.db  main.py  pyproject.toml
app/database/: database.py
app/models/: models.py  tax.py
app/routers/: __init__.py  tax.py  users.py
docker/mysql/: init.sql
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.vue
